# quorvex_ai

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .gitpod.yml  .mcp.json  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  Makefile  README.md  README.minimal.md  RELEASE.md  SECURITY.md  SUPPORT.md  demo.tape  docker-compose.autopilot-stable.yml  docker-compose.dev-fast.yml  docker-compose.dev-override.yml  docker-compose.minimal.yml  docker-compose.prod.yml  docker-compose.swarm.yml  docker-compose.yml  index.html  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.freeze  setup.sh  sitemap.xml  supervisord.conf
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
comparisons/: index.html
deploy/: README.md  company-network-handoff.md  install-server.sh  rehearse-company-external-nginx.sh  release-preflight.sh  server-upgrade.sh  test-install-server-dry-run.sh  test-private-deploy-template.sh
docs/: .style-guide.md  index.md
explanation/: index.html
guides/: index.html
k8s/: README.md  agent-worker-deployment.yaml  autonomous-mission-worker-deployment.yaml  backend-deployment.yaml  configmap.yaml  kustomization.yaml  temporal-deployment.yaml
orchestrator/: .env.example  cli.py  config.py  load_env.py  pyproject.toml  requirements.txt
reference/: index.html
scripts/: agent_temporal_smoke.py  autonomous_soak.py  benchmark_pipeline.py  bootstrap_prod_env.py  check_agent_runtime_ready.py  (+7 more)
(+1073 files in other folders)
